fix(ci): 修复 Tauri 构建缺失依赖并优化打包标识
- 添加 @tauri-apps/plugin-dialog 前端依赖，解决 AgentPage.tsx 编译失败

- 调整 tauri identifier 为 com.explore-os.desktop，移除 .app 警告

- 保持现有 GitHub Actions 构建流程不变

--- a/app/package.json
+++ b/app/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tauri-apps/api": "^2.2.0",
+    "@tauri-apps/plugin-dialog": "^2.6.0",
     "@tauri-apps/plugin-shell": "^2.3.5",
     "axios": "^1.13.4",
     "class-variance-authority": "^0.7.1",
