--- a/app/src-tauri/Cargo.toml
+++ b/app/src-tauri/Cargo.toml
@@ -26,6 +26,8 @@ chrono = { version = "0.4", features = ["serde"] }
 # Error handling
 thiserror = "1"
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
+feed-rs = "2"
+webbrowser = "1"
 
 [features]
 custom-protocol = ["tauri/custom-protocol"]
